     useful as an UPS driver, not just a controller developer sandbox. [#2188]
   * The `onlinedischarge` configuration flag name was too ambiguous and got
     deprecated (will be supported but no longer promoted by documentation),
     introducing `onlinedischarge_onbattery` as the meaningful alias. [#2213]
   * Logged notifications about `OL+DISCHRG` state should now be throttled
     (see the driver manual page for more details) [#2214]:
     - If `battery.charge` is available, make the message when entering the
       state and then only if the charge differs from that when we posted
       the earlier message (e.g. really discharging);
     - Also can throttle to a time frequency configurable by a new option
       `onlinedischarge_log_throttle_sec`, by default 30 sec if `battery.charge`
       is not reported by the device (should be frequent by default, in case
       the UPS-reported state combination does reflect a bad power condition).

Release notes for NUT 2.8.1 - what's new since 2.8.0
----------------------------------------------------

https://github.com/networkupstools/nut/milestone/8

 - "UPS management protocol", Informational RFC 9271 published
   by IETF at https://www.rfc-editor.org/info/rfc9271 and the
   IANA port number registry was updated accordingly at
   https://www.iana.org/assignments/service-names-port-numbers/service-names-port-numbers.xhtml?search=3493
   (even though this RFC is not formally an Internet Standard)

 - NUT documentation files were rearranged, renaming some to `*.adoc` pattern
   to facilitate automatic rendering in GitHub and IDE GUIs, and adding recipe
   support for GitHub issue/PR links. This `NEWS` file is now proper asciidoc
   rendered into `release-notes.pdf` (and HTML versions). [issue #1953, PR #2048]
   Internally, the documents would use a new way to define cross-linking to
   other pages and their chapters, to facilitate different renderers (including