@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3422 utf-8
+personal_ws-1.1 en 3423 utf-8
 AAC
 AAS
 ABI
@@ -2173,6 +2173,7 @@ hostnames
 hostsfile
 hotplug
 hotplugging
+hovercharge
 hpe
 href
 htaccess
