@@ -111,10 +111,11 @@ https://github.com/networkupstools/nut/milestone/10
      deprecated (will be supported but no longer promoted by documentation),
      introducing `onlinedischarge_onbattery` as the meaningful alias. [#2213]
    * Logged notifications about `OL+DISCHRG` state should now be throttled
-     (see the driver manual page for more details) [#2214]:
+     (see the driver manual page for more details) [#2214, #2215]:
      - If `battery.charge` is available, make the message when entering the
        state and then only if the charge differs from that when we posted
-       the earlier message (e.g. really discharging);
+       the earlier message (e.g. really discharging) and is under
+       `onlinedischarge_log_throttle_hovercharge` value (defaults to 100%);
      - Also can throttle to a time frequency configurable by a new option
        `onlinedischarge_log_throttle_sec`, by default 30 sec if `battery.charge`
        is not reported by the device (should be frequent by default, in case
